[project]
dependencies = []
name = "casie"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
casie = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pgenlib = ">=0.94.1,<0.95"
numpy = ">=2.5.1,<3"
scipy = ">=1.18.0,<2"
polars = ">=1.42.1,<2"
h5py = ">=3.16.0,<4"
